Add vectorized version of java loop